--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
       <div class="left">
        <div class="pictures">
           <picture>
-            <source class="mobile-image" media="(max-width: 600px)" srcset="./images/illustration-woman-online-mobile.svg">
+            <source class="mobile-image" media="(max-width: 450px)" srcset="./images/illustration-woman-online-mobile.svg">
 
-            <source class="mobile-image" media="(min-width: 450px)" srcset="./images/illustration-woman-online-mobile.svg">
+            <!-- <source class="mobile-image" media="(min-width: 450px)" srcset="./images/illustration-woman-online-mobile.svg"> -->
 
             <img class="box" src="/images/illustration-box-desktop.svg">
           </picture>
