Fixed some issues with responsiveness

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
   <main class="main__section">
     <div class="card container">
       <div class="left">
-       <div class="pictures">
+        <div class="pictures">
           <picture>
-            <source class="mobile-image" media="(max-width: 600px)" srcset="./images/illustration-woman-online-mobile.svg">
+            <source class="mobile-image" media="(max-width: 450px)" srcset="./images/illustration-woman-online-mobile.svg">
 
-            <source class="mobile-image" media="(min-width: 450px)" srcset="./images/illustration-woman-online-mobile.svg">
+            <!-- <source class="mobile-image" media="(min-width: 450px)" srcset="./images/illustration-woman-online-mobile.svg"> -->
 
             <img class="box" src="/images/illustration-box-desktop.svg">
           </picture>
-       </div>
+        </div>
       </div>
       <div class="right">
         <h1>FAQ</h1>
@@ -83,8 +83,8 @@
 
 
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/rafacalvo" target="_blank" rel="noopener noreferrer">Rafael Calvo</a>.
   </div>
 
   <script src="script.js"></script>
