--- a/index.html
+++ b/index.html
@@ -83,13 +83,9 @@
 
 
   <div class="attribution">
-<<<<<<< HEAD
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/rafacalvo" target="_blank" rel="noopener noreferrer">Rafael Calvo</a>.
-=======
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="https://github.com/rafacalvo">Rafael Calvo</a>.
->>>>>>> 85602f05bc8a77a8ca66c9b806f5cc0eca74f045
+    <p>Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend
+      Mentor</a>.
+    Coded by <a href="https://github.com/rafacalvo" target="_blank" rel="noopener noreferrer">Rafael Calvo</a>.</p>
   </div>
 
   <script src="script.js"></script>
